GG-30837 Make .sh and .bat scripts for index reader and wal reader