@@ -187,15 +187,8 @@ if "%MAIN_CLASS%" == "" set MAIN_CLASS=org.apache.ignite.internal.commandline.in
 ::
 :: Final CONTROL_JVM_OPTS for Java 9+ compatibility
 ::
-if %MAJOR_JAVA_VER% == 8 (
-    set CONTROL_JVM_OPTS= ^
-    -XX:+AggressiveOpts ^
-    %CONTROL_JVM_OPTS%
-)
-
 if %MAJOR_JAVA_VER% GEQ 9 if %MAJOR_JAVA_VER% LSS 11 (
     set CONTROL_JVM_OPTS= ^
-    -XX:+AggressiveOpts ^
     --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED ^
     --add-exports=java.base/sun.nio.ch=ALL-UNNAMED ^
     --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED ^
